--- a/index.html
+++ b/index.html
@@ -3,32 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lua Scripts Browser</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Simple HTML Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Lua Scripts Browser</h1>
+        <h1>Welcome to My Website</h1>
     </header>
     <main>
-        <ul id="scripts-list"></ul>
+        <ul>
+            <li><button>Button 1</button></li>
+            <li><button>Button 2</button></li>
+            <li><button>Button 3</button></li>
+        </ul>
     </main>
     <footer>
-        <p>© 2024 Lua Scripts Browser</p>
+        <p>© 2025 Simple HTML Website</p>
     </footer>
-    <!-- Include Fengari -->
-    <script src="https://unpkg.com/fengari-web/umd/fengari-web.js"></script>
-    <script>
-        // Example Lua script
-        const luaScript = `
-            local data = {'Lua', 'JavaScript', 'Python'}
-            for i, v in ipairs(data) do
-                print(i .. ': ' .. v)
-            end
-        `;
-
-        // Run the Lua script using Fengari
-        fengari.load(luaScript)();
-    </script>
 </body>
 </html>
