--- a/index.html
+++ b/index.html
@@ -3,22 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML Website</title>
+    <title>Styled Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Styled Website</h1>
+        <p>Best Website for Stylish Design</p>
+        <div>
+            <button>Log in</button>
+            <button>Sign up</button>
+        </div>
     </header>
     <main>
-        <ul>
-            <li><button>Button 1</button></li>
-            <li><button>Button 2</button></li>
-            <li><button>Button 3</button></li>
-        </ul>
+        <section id="features">
+            <h2>Our Features</h2>
+            <button>Purchase</button>
+            <button>Learn More</button>
+            <button>UI Preview</button>
+        </section>
     </main>
     <footer>
-        <p>© 2025 Simple HTML Website</p>
+        <p>© 2025 Styled Website</p>
     </footer>
 </body>
 </html>
