--- a/index.html
+++ b/index.html
@@ -7,32 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-    <header>
-        <h1>Styled Website</h1>
-        <p>Best Website for Stylish Design</p>
-        <div>
-            <button>Log in</button>
-            <button>Sign up</button>
-        </div>
-    </header>
+
+
     <main>
         <section id="features">
-            <h2>Our Features</h2>
-            <button>Purchase</button>
-            <button>Learn More</button>
-            <button>UI Preview</button>
+            <h2>Test</h2>
+
         </section>
     </main>
     <footer>
-        <p>© 2025 Styled Website</p>
+        <p>© 2025 BaconStorage</p>
     </footer>
 </body>
 </html>
