--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Styled Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Modern Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
-    <main>
-        <section id="features">
-            <h2>Test</h2>
-
-        </section>
-    </main>
-    <footer>
-        <p>© 2025 BaconStorage</p>
-    </footer>
+    <header>
+        <h1>Welcome to My Modern Site</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Tools</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="content">
+        <p>This is a sleek, minimal, and modern website hosted on GitHub Pages!</p>
+        <button onclick="showMessage()">Click Me</button>
+    </section>
+    <script src="script.js"></script>
 </body>
 </html>
