--- a/repositories.html
+++ b/repositories.html
@@ -22,16 +22,18 @@
             <div class="content-grid">
                 <aside class="sidebar">
                     <ul class="nav-list">
-                        <li><a href="index.html" class="nav-item active"><i class="fas fa-home"></i> Home</a></li>
-                        <li><a href="repositories.html" class="nav-item"><i class="fas fa-code"></i> Repositories</a></li>
+                        <li><a href="index.html" class="nav-item"><i class="fas fa-home"></i> Home</a></li>
+                        <li><a href="repositories.html" class="nav-item active"><i class="fas fa-code"></i> Repositories</a></li>
                     </ul>
                 </aside>
 
                 <div class="page-content">
                     <div class="card">
-                        <h1>Welcome to Bacon's webserver</h1>
-                        <p>A clean, modern GitHub-inspired site.</p>
-                        <p>Explore my <strong>Repositories</strong></p>
+                        <h1>My Repositories</h1>
+                        <ul class="repo-list">
+
+                            
+                        </ul>
                     </div>
                 </div>
             </div>
